feat: use lidinAppKit library

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,8 +1,9 @@
 {
+  "workInProgress": "This web-site is in work-in-progress !",
   "welcome": "Welcome to our website!",
   "title1": "Développeur Web/Mobile/Logiciel",
   "title2": "⚡ Vue.js Expert",
-  "title3":  "👨‍🏫 Teacher. Available.",
+  "title3": "👨‍🏫 Teacher. Available.",
   "language": "Language",
   "description1": "👨‍💻 Full-stack Developer with a strong expertise in front-end, I am passionate about and highly skilled in the Vue.js framework and its ecosystem.",
   "description2": "🛠 Software Architect with a preference for working with startups, I design technically rich projects from scratch.",
@@ -10,7 +11,7 @@
   "description4": "💡 My philosophy: turning complexity into simplicity. I position myself as a proactive problem solver, addressing your technical and functional challenges. Driven by a quest for perfection, my work is and will always be of impeccable quality.",
   "description5": "💬 Feel free to reach out to discuss your projects or ask any questions!",
   "SEO": {
-     "home": {
+    "home": {
       "title": "Nicolas Lidin - Web, Mobile, and Software Developer | Vue.js Expert",
       "description": "Nicolas Lidin, full-stack developer specialized in front-end, Vue.js expert, educator, and software architect. Transforming your ideas into high-quality digital solutions with precision and efficiency.",
       "ogTitle": "Nicolas Lidin - Web and Mobile Developer, Vue.js Expert",
